--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -158,8 +158,9 @@ a {
     height: 100%;
     background-color: white;
     display: grid;
-    grid-template-columns: repeat(5, 150px);
-    grid-template-rows: 150px 150px;
+/*     grid-template-columns: repeat(5, 150px);
+    grid-template-rows: 150px 150px; */
+    grid-template-columns:repeat(auto-fit, minmax(150px, 1fr));
     gap: 10px;
 
 }
