--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -154,7 +154,7 @@ a {
     position: fixed;
     margin-left: 200px;
     padding: 10px 10px 10px 10px;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background-color: white;
     display: grid;
