--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -160,7 +160,7 @@ a {
     display: grid;
 /*     grid-template-columns: repeat(5, 150px);
     grid-template-rows: 150px 150px; */
-    grid-template-columns:repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns:repeat(auto-fit, minmax(1fr, 150px));
     gap: 10px;
 
 }
