--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -161,7 +161,7 @@ a {
 /*     grid-template-columns: repeat(5, 150px);
     grid-template-rows: 150px 150px; */
     grid-template-columns:repeat(auto-fit, minmax(1fr, 150px));
-    grid-template-rows:repeat(auto-fit, minmax(1fr, 150px));
+    grid-template-rows:repeat(2, minmax(1fr, 150px));
     gap: 10px;
 
 }
